Make deployment limitation configurable

--- a/dicewars.config
+++ b/dicewars.config
@@ -6,4 +6,6 @@ DiceAssignment = orig
 AreaAssignment = orig
 
 [GAME]
-MaxDicePerArea = 10
+MaxDicePerArea = 8
+; DeploymentMethod = ; limited unlimited
+DeploymentMethod = limited
