Make number of transfers per turn configurable

--- a/dicewars.config
+++ b/dicewars.config
@@ -9,3 +9,7 @@ AreaAssignment = orig
 MaxDicePerArea = 8
 ; DeploymentMethod = ; limited unlimited
 DeploymentMethod = limited
+
+[AI_DRIVER]
+; on the limit of transfers is exceeded, AIDrives takes over and sends an end_turn. Does not disable the AI for next turns.
+MaxTransfersPerTurn = 2
