--- a/dicewars.config
+++ b/dicewars.config
@@ -9,6 +9,10 @@ AreaAssignment = orig
 MaxDicePerArea = 8
 ; DeploymentMethod = ; limited unlimited
 DeploymentMethod = limited
+; Sets the minimum needed for unsuccessfull attack to deal damage.
+; Works in multiplies, e.g. with 4, area with 1--3 dice deal no dmg, 4--7 deal 1, 8--11 deal 2 etc.
+; Turn off by setting value larger than MaxDicePerArea
+BattleWearMinimum = 4
 
 [AI_DRIVER]
 ; on the limit of transfers is exceeded, AIDrives takes over and sends an end_turn. Does not disable the AI for next turns.
