Make constructor time limit properly configured

--- a/dicewars.config
+++ b/dicewars.config
@@ -17,3 +17,5 @@ BattleWearMinimum = 4
 [AI_DRIVER]
 ; on the limit of transfers is exceeded, AIDrives takes over and sends an end_turn. Does not disable the AI for next turns.
 MaxTransfersPerTurn = 2
+; amount of time allowed for AI to construct itself. In seconds
+TimeLimitConstructor = 10.0
