Make Fischer clock configurable

--- a/dicewars.config
+++ b/dicewars.config
@@ -17,5 +17,8 @@ BattleWearMinimum = 4
 [AI_DRIVER]
 ; on the limit of transfers is exceeded, AIDrives takes over and sends an end_turn. Does not disable the AI for next turns.
 MaxTransfersPerTurn = 2
-; amount of time allowed for AI to construct itself. In seconds
+; amount of time allowed for AI to construct itself. In seconds.
 TimeLimitConstructor = 10.0
+; Parameters of Fischer clock. In seconds.
+FischerInit = 10.0
+FischerIncrement = 0.25
