--- a/dicewars.config
+++ b/dicewars.config
@@ -13,6 +13,11 @@ DeploymentMethod = limited
 ; Works in multiplies, e.g. with 4, area with 1--3 dice deal no dmg, 4--7 deal 1, 8--11 deal 2 etc.
 ; Turn off by setting value larger than MaxDicePerArea
 BattleWearMinimum = 4
+; Maximum number of rounds without an attack. Everybody loses the game once exceeded
+MaximumNoBattleRounds = 8
+; Maximum number of battles in a game. Everybody loses the game once exceeded. 
+; In 2019, a test over 10k games showed 5671 battles as the highest number 
+MaximumBattlesPerGame = 10000
 
 [AI_DRIVER]
 ; on the limit of transfers is exceeded, AIDrives takes over and sends an end_turn. Does not disable the AI for next turns.
