--- a/dicewars.config
+++ b/dicewars.config
@@ -9,6 +9,8 @@ AreaAssignment = orig
 MaxDicePerArea = 8
 ; DeploymentMethod = ; limited unlimited
 DeploymentMethod = limited
+; Limit on (reserve + production) in dice
+ReserveProductionCap = 16
 ; Sets the minimum needed for unsuccessfull attack to deal damage.
 ; Works in multiplies, e.g. with 4, area with 1--3 dice deal no dmg, 4--7 deal 1, 8--11 deal 2 etc.
 ; Turn off by setting value larger than MaxDicePerArea
