--- a/dicewars.config
+++ b/dicewars.config
@@ -10,7 +10,9 @@ MaxDicePerArea = 8
 ; DeploymentMethod = ; limited unlimited
 DeploymentMethod = limited
 ; Limit on (reserve + production) in dice
-ReserveProductionCap = 16
+ReserveProductionCap = 64
+; Limit on reserve itself, in dice
+ReserveSizeCap = 16
 ; Sets the minimum needed for unsuccessfull attack to deal damage.
 ; Works in multiplies, e.g. with 4, area with 1--3 dice deal no dmg, 4--7 deal 1, 8--11 deal 2 etc.
 ; Turn off by setting value larger than MaxDicePerArea
