--- a/dicewars.config
+++ b/dicewars.config
@@ -11,8 +11,10 @@ MaxDicePerArea = 8
 DeploymentMethod = limited
 ; Limit on (reserve + production) in dice
 ReserveProductionCap = 64
+; Reserve type. 'constant' means that ReserveSizeCap is applied; 'complement' means that (ReserveSizeCap - #areas) is the effective cap
+ReserveType = complement
 ; Limit on reserve itself, in dice
-ReserveSizeCap = 16
+ReserveSizeCap = 8
 ; Sets the minimum needed for unsuccessfull attack to deal damage.
 ; Works in multiplies, e.g. with 4, area with 1--3 dice deal no dmg, 4--7 deal 1, 8--11 deal 2 etc.
 ; Turn off by setting value larger than MaxDicePerArea
