Factor out the act of assigning an area

--- a/dicewars.config
+++ b/dicewars.config
@@ -3,7 +3,7 @@ BoardSize = 30
 ; DiceAssignment = ; flat orig
 DiceAssignment = orig
 ; AreaAssignment = ; continuous orig
-AreaAssignment = orig
+AreaAssignment = continuous
 
 [GAME]
 MaxDicePerArea = 8
