--- a/dicewars.config
+++ b/dicewars.config
@@ -4,6 +4,8 @@ BoardSize = 30
 DiceAssignment = orig
 ; AreaAssignment = ; continuous orig
 AreaAssignment = continuous
+; Average number of dice per area at the start of the game
+DiceDensity = 2
 
 [GAME]
 MaxDicePerArea = 8
