--- a/dicewars.config
+++ b/dicewars.config
@@ -1,5 +1,5 @@
 [BOARD]
-BoardSize = 30
+BoardSize = 40
 ; DiceAssignment = ; flat orig
 DiceAssignment = orig
 ; AreaAssignment = ; continuous orig
@@ -10,13 +10,13 @@ DiceDensity = 2
 [GAME]
 MaxDicePerArea = 8
 ; DeploymentMethod = ; limited unlimited
-DeploymentMethod = limited
+DeploymentMethod = unlimited
 ; Limit on (reserve + production) in dice
 ReserveProductionCap = 64
 ; Reserve type. 'constant' means that ReserveSizeCap is applied; 'complement' means that (ReserveSizeCap - #areas) is the effective cap
 ReserveType = complement
 ; Limit on reserve itself, in dice
-ReserveSizeCap = 8
+ReserveSizeCap = 16
 ; Sets the minimum needed for unsuccessfull attack to deal damage.
 ; Works in multiplies, e.g. with 4, area with 1--3 dice deal no dmg, 4--7 deal 1, 8--11 deal 2 etc.
 ; Turn off by setting value larger than MaxDicePerArea
@@ -29,7 +29,7 @@ MaximumBattlesPerGame = 10000
 
 [AI_DRIVER]
 ; on the limit of transfers is exceeded, AIDrives takes over and sends an end_turn. Does not disable the AI for next turns.
-MaxTransfersPerTurn = 2
+MaxTransfersPerTurn = 5
 ; amount of time allowed for AI to construct itself. In seconds.
 TimeLimitConstructor = 10.0
 ; Parameters of Fischer clock. In seconds.
